make blog more readable and fix some problems
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@734902 13f79535-47bb-0310-9956-ffa450edef68

--- a/applications/ecommerce/webapp/ecommerce/images/blog.css
+++ b/applications/ecommerce/webapp/ecommerce/images/blog.css
@@ -1,7 +1,7 @@
 .blogs {
 position: inherit;
 width: inherit;
-font-size: 62.5%;
+font-size: 100%;
 text-decoration: none;
 font-family: Verdana, Arial, Helvetica, sans-serif;
 padding-right: 18%;
